# fss

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
dpf/: Cargo.toml  README.md
dpf/src/: lib.rs  tests.rs
dpf/src/bgi18/: data_structures.rs  mod.rs
funcs/: Cargo.toml  README.md
funcs/benches/: bench.rs
funcs/src/: data_structures.rs  group.rs  lib.rs  prg.rs  tests.rs  tree.rs
funcs/src/bgi18/: mod.rs
funcs/src/interval/: mod.rs  tests.rs
funcs/src/interval/bgi15/: mod.rs
funcs/src/interval/bgi18/: data_structures.rs  mod.rs
funcs/src/point/: mod.rs  tests.rs
funcs/src/point/bgi15/: mod.rs
funcs/src/point/bgi18/: data_structures.rs  mod.rs
functions/: Cargo.toml  README.md
functions/benches/: bench.rs
functions/src/: lib.rs  tests.rs
