[package]
name = "fss-funcs"
version = "0.1.0"
description = "A library providing efficient function secret-sharing schemes"
authors = [ "Ryan Lehmkuhl" ]
license = "MIT"
edition = "2021"

[dependencies]
ark-ff = { git="https://github.com/arkworks-rs/algebra" }
ark-serialize = { git="https://github.com/arkworks-rs/algebra", features = ["derive"] }
ark-std = "^0.3.0"
rand = "^0.8.4" 

[dev-dependencies]
bincode = "^1.3.3"
criterion = "^0.3"
rand_chacha = "^0.3.1"

[[bench]]
name = "bench"
harness = false
