[package]
name = "fss-funcs"
version = "0.1.0"
description = "A library providing efficient function secret-sharing schemes"
authors = [ "Ryan Lehmkuhl" ]
license = "MIT"
edition = "2021"

[dependencies]
aes = "0.8.2"
crypto-bigint="0.4.9"
ctr = "0.9.2"
num-traits = "0.2.15"
rand = "0.8.4"
rand_core = "0.6.4"
